# Rocket

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/src/: routing.rs
contrib/csrf/: Cargo.toml  README.md
contrib/csrf/src/: config.rs  fairing.rs  key.rs  lib.rs  session.rs  tests.rs  tokenizer.rs
contrib/db_pools/: README.md
contrib/db_pools/codegen/: Cargo.toml
contrib/db_pools/lib/: Cargo.toml
contrib/dyn_templates/: Cargo.toml  README.md
contrib/dyn_templates/src/: context.rs  fairing.rs  lib.rs
contrib/dyn_templates/src/engine/: handlebars.rs  minijinja.rs  tera.rs
contrib/sync_db_pools/: README.md
contrib/sync_db_pools/codegen/: Cargo.toml
contrib/sync_db_pools/lib/: Cargo.toml
contrib/ws/: Cargo.toml  README.md
core/codegen/: Cargo.toml
core/http/: Cargo.toml
core/http/src/: raw_str.rs
core/lib/: Cargo.toml
core/lib/src/: erased.rs  error.rs  guide.rs  lib.rs  lifecycle.rs  outcome.rs  rocket.rs  server.rs  trace.rs
core/lib/src/config/: config.rs  (+3 more)
core/lib/tests/: private-data.rs
docs/guide/: 00-introduction.md  01-quickstart.md  01-upgrading.md  02-quickstart.md  03-getting-started.md  03-overview.md  04-overview.md  04-requests.md  05-requests.md  05-responses.md  06-responses.md  06-state.md  07-fairings.md  07-state.md  08-fairings.md  08-testing.md  09-configuration.md  09-testing.md  10-configuration.md  10-pastebin.md  11-conclusion.md  11-deploying.md  11-pastebin.md  12-conclusion.md  12-pastebin.md  13-faq.md  14-faq.md  index.md
docs/tests/: Cargo.toml
examples/: Cargo.toml
examples/cookies/: Cargo.toml
examples/cookies/src/: main.rs
examples/form_kitchen_sink/src/: tests.rs
examples/private-data/: Cargo.toml  Rocket.toml
examples/private-data/src/: main.rs  tests.rs
examples/templating/src/: minijinja.rs  tests.rs
scripts/: mk-docs.sh  test.sh
site/: README.md
site/guide/: 01-upgrading.md  1-quickstart.md  12-faq.md  2-getting-started.md  4-requests.md  index.md
site/news/: 2023-11-17-version-0.5.md
testbench/src/: main.rs
testbench/src/servers/: sni_resolver.rs
(+27 files in other folders)
