[package]
name = "rocket_csrf"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "CSRF protection for Rocket."
documentation = "https://api.rocket.rs/master/rocket_csrf/"
homepage = "https://rocket.rs"
repository = "https://github.com/rwf2/Rocket/tree/master/contrib/csrf"
readme = "README.md"
keywords = ["rocket", "web", "framework", "csrf", "security"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
arc-swap = "1.7"
blake3 = { version = "1.5.1", features = ["serde"] }
base64 = "0.22"
zerocopy = { version = "=0.8.0-alpha.7", features = ["derive"] }
multer = { version = "3.0.0", features = ["tokio-io"] }

[dependencies.rocket]
version = "0.6.0-dev"
path = "../../core/lib"
default-features = false
features = ["secrets"]

[package.metadata.docs.rs]
all-features = true
