[package]
name = "rocket_dyn_templates"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Dynamic templating engine integration for Rocket."
documentation = "https://api.rocket.rs/v0.5/rocket_dyn_templates/"
homepage = "https://rocket.rs"
repository = "https://github.com/rwf2/Rocket/tree/v0.5/contrib/dyn_templates"
readme = "README.md"
keywords = ["rocket", "framework", "templates", "templating", "engine"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64"

[features]
tera = ["dep:tera"]
handlebars = ["dep:handlebars"]
minijinja = ["dep:minijinja"]

[dependencies]
walkdir = "2.4"
notify = "6"
normpath = "1"

tera = { version = "1.19.0", optional = true }
handlebars = { version = "5.1", optional = true }

[dependencies.minijinja]
version = "2.0.1"
optional = true
features = ["loader", "speedups", "json", "urlencode"]

[dependencies.rocket]
version = "0.5.0"
path = "../../core/lib"
default-features = false

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.docs.rs]
all-features = true
